gccida/c0/noce_try_cmove
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_cmove/src/ifcvt.c:1435:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)if_info->cond, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_cmove/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_cmove/src/ifcvt.c:1435:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)if_info->cond, 
             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_cmove/src/obj/ifcvt.o] Error 1
